# Supply-Prescript1

./: .gitignore  README.md  config  docker-compose.yml  index.html  package-lock.json  package.json  pyvenv.cfg  request_prediction.py
backend/supplyprescript-backend/: .env.example  config  inspect_model.py  package.json  pyproject.toml
backend/supplyprescript-backend/alembic/: env.py
backend/supplyprescript-backend/app/: main.py
backend/supplyprescript-backend/app/api/: deps.py
backend/supplyprescript-backend/app/api/v1/: router.py
backend/supplyprescript-backend/app/api/v1/endpoints/: orders.py  recommendations.py  shipments.py
backend/supplyprescript-backend/app/core/: config.py  security.py
backend/supplyprescript-backend/app/crud/: supplier.py
backend/supplyprescript-backend/app/models/: inventory_item.py
backend/supplyprescript-backend/app/schemas/: recommendation.py
backend/supplyprescript-backend/backend/supplyprescript-backend/: Dockerfile  requirements.txt
backend/supplyprescript-backend/backend/supplyprescript-backend/app/crud/: base.py
backend/supplyprescript-backend/backend/supplyprescript-backend/app/models/: __init__.py  order.py  recommendation.py  supplier.py
backend/supplyprescript-backend/backend/supplyprescript-backend/app/schemas/: __init__.py  inventory_item.py  order.py
backend/supplyprescript-backend/backend/supplyprescript-backend/app/services/: forecasting_service.py  inventory_service.py
backend/supplyprescript-backend/ml/: inference.py  train_model.py
ml/: inference.py  test_model.py  train_model.py
(+45 files in other folders)
